--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.9",
     "path": "^0.12.7",
+    "sharp": "^0.33.5",
     "uuid": "^11.0.5"
   }
 }
